# mjolnir

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  PLANS.md  README.md  install.sh
.agents/plans/: council-results.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  session_ui_bug.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
docs/: acp-registry-presets.md  astro.config.mjs  code-agent-extension.md  install-smoke.md  package-lock.json  package.json  rehype-base-path-links.mjs  session-rewind-extension.md  thor-coordinator-plan.md  trust-folder-support.md
docs/fixtures/ten-minute-evaluation/: README.md  test_weather.py  weather.py
docs/scripts/: check-links.mjs  render-social-card.mjs
docs/src/components/: MjolnirHeader.astro  MjolnirHero.astro
docs/src/content/docs/: adapters.md  cli-reference.md  configuration.md  council.md  data-boundaries.md  delegation-review.md  evaluate.md  headless.md  index.mdx  install.md  license-use-cases.md  overview.md  permissions.md  remote.md  sessions-worktrees.md  storage-network.md  third-party-notices.md
docs/src/styles/: mjolnir.css
licenses/: .gitattributes  SOURCE.md  SUPPLEMENTAL_THIRD_PARTY_NOTICES.txt  THIRD_PARTY_LICENSES.html  about.hbs  about.toml  deny.toml
licenses/anvil-v0.22.0/: SOURCE.md  SUPPLEMENTAL_THIRD_PARTY_NOTICES.txt  THIRD_PARTY_LICENSES.html
scripts/: announce-discord-release.sh  generate-supplemental-third-party-notices.mjs
src/: acp.rs  advisor.rs  anvil.rs  app.rs  archive.rs  auth.rs  bedrock_credits.rs  claude_usage.rs  clipboard.rs  code_agent.rs  codex_usage.rs  config.rs  council.rs  council_orchestrator.rs  council_usage.rs  deepseek_balance.rs  deepswe.rs  deepswe_snapshot.json  event.rs  headless.rs  install.rs  kimi.rs  labels.rs  loki.rs  main.rs  mcp.rs  menu.rs  model_resolve.rs  notifications.rs  onboarding.rs  openrouter_balance.rs  palette.rs  paths.rs  picker.rs  probe.rs  probe_cache.rs  qr.rs  quota.rs  ragnarok.rs  ragnarok_sprites.rs  (+32 more)
src/ragnarok/: eligibility.rs  event.rs  thor.rs
src/remote_assets/: app.js  dom.js  markdown.js  notify.js  palette.js
target-bookworm/: .rustc_info.json
target-bookworm/release/.fingerprint/adler2-eeee5ceddf26dad8/: lib-adler2  lib-adler2.json
target-bookworm/release/.fingerprint/adler2-f4ce7efee7b65432/: lib-adler2  lib-adler2.json
target-bookworm/release/.fingerprint/ahash-96524e2d52c06528/: build-script-build-script-build  build-script-build-script-build.json
target-bookworm/release/.fingerprint/ahash-abf4f5eec0211e23/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-bookworm/release/.fingerprint/alloc-no-stdlib-c324483aa2c8c275/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
target-bookworm/release/.fingerprint/allocator-api2-3b5b80aa27074339/: lib-allocator_api2  lib-allocator_api2.json
target-bookworm/release/.fingerprint/alsa-sys-db935bb83c8f524c/: build-script-build-script-build  build-script-build-script-build.json
target-bookworm/release/.fingerprint/anstyle-parse-5a00a242a0127d1d/: lib-anstyle_parse  lib-anstyle_parse.json
target-bookworm/release/.fingerprint/anyhow-fd1ad12d49f849c2/: build-script-build-script-build  build-script-build-script-build.json
target-bookworm/release/.fingerprint/arrow-schema-15481735b533a73e/: lib-arrow_schema  lib-arrow_schema.json
target-bookworm/release/.fingerprint/async-channel-9ad64f01e70585c9/: lib-async_channel  lib-async_channel.json
target-bookworm/release/.fingerprint/async-io-d00f49baea967334/: build-script-build-script-build  build-script-build-script-build.json
target-bookworm/release/.fingerprint/async-io-f6e0c0f9b8125fb9/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-bookworm/release/.fingerprint/atomic-waker-0d22c95eba868f9a/: lib-atomic_waker  lib-atomic_waker.json
target-bookworm/release/.fingerprint/autocfg-6f3f4aeb65b1acff/: lib-autocfg  lib-autocfg.json
target-bookworm/release/.fingerprint/base64-2adfbbbc34647208/: lib-base64  lib-base64.json
target-bookworm/release/.fingerprint/base64-f3fc1013d1467466/: lib-base64  lib-base64.json
target-bookworm/release/.fingerprint/bitflags-a3466958cc37c7eb/: lib-bitflags  lib-bitflags.json
target-bookworm/release/.fingerprint/bitflags-bfe9eb986d999afe/: lib-bitflags  lib-bitflags.json
target-bookworm/release/.fingerprint/bytes-6fd90c3a03463375/: lib-bytes  lib-bytes.json
target-bookworm/release/.fingerprint/bzip2-sys-c5d7f19b8fea1d49/: build-script-build-script-build  build-script-build-script-build.json
target-bookworm/release/.fingerprint/castaway-f3b4815d320efe21/: lib-castaway  lib-castaway.json
target-bookworm/release/.fingerprint/cc-908a8f22ed26aa6b/: lib-cc  lib-cc.json
target-bookworm/release/.fingerprint/cfg-if-187e54e787fafc5c/: lib-cfg_if  lib-cfg_if.json
target-bookworm/release/.fingerprint/cfg-if-5e44fb39a134b58d/: lib-cfg_if  lib-cfg_if.json
target-bookworm/release/.fingerprint/compact_str-333806ecbcc11ab3/: lib-compact_str  lib-compact_str.json
target-bookworm/release/.fingerprint/concurrent-queue-13b87d045e9ceaa8/: lib-concurrent_queue  lib-concurrent_queue.json
target-bookworm/release/.fingerprint/convert_case-91662193e22be0dc/: lib-convert_case  lib-convert_case.json
target-bookworm/release/.fingerprint/crc32fast-3e2beeaca93f4fc0/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-bookworm/release/.fingerprint/crc32fast-747a1751a20b7747/: lib-crc32fast  lib-crc32fast.json
tests/: termination_pty.rs
tests/e2e/: council-agent.mjs  deterministic.sh  drive-live.exp  drive-mj.exp  live-codex.sh  nested-agent.mjs  primary-agent.mjs
tests/e2e/fake-bin/: npx
tests/web/: README.md  jest.config.js  package.json  viewer.test.js
tests/web/fixtures/: stub-agent.mjs
tests/web/lib/: coverage.js  harness.js
voice-worker/: Cargo.toml
voice-worker/src/: backend.rs  main.rs
(+405 files in other folders)
