[package]
name = "brokk-mjolnir"
version = "1.0.2"
edition = "2024"
description = "Forge-grade terminal client for any Agent Client Protocol (ACP) server"
license = "GPL-3.0"
repository = "https://github.com/BrokkAi/mjolnir"
publish = true

[workspace]
members = ["voice-worker"]
default-members = ["."]

[[bin]]
name = "mj"
path = "src/main.rs"

[dependencies]
agent-client-protocol = { version = "1", features = ["unstable_session_fork", "unstable_end_turn_token_usage", "unstable_elicitation"] }
anyhow = "1"
axum = "0.8"
# Use the ring CryptoProvider (already pulled by reqwest/rcgen) instead of the
# default aws-lc-rs, which needs cmake + a C toolchain and fails to
# cross-compile cleanly for the Android CI target.
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
base64 = "0.22"
bzip2 = "0.6"
# `clock` pulls `iana-time-zone`/`android-tzdata` so `Local` can render reset
# timestamps in the machine's wall-clock time (DST-correct); `default-features
# = false` drops the wasm-only bits. chrono is already in the tree via rmcp.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
crossterm = { version = "0.29", features = ["event-stream"] }
dirs = "6"
flate2 = "1"
futures = "0.3"
getrandom = "0.3"
# HMAC-SHA256 signs the stateless remote-viewer session cookie (keyed on a
# persisted signing key); pairs with the existing `sha2`.
hmac = "0.12"
# Resolves the IANA zone name (e.g. "Europe/Paris") to append to reset times.
iana-time-zone = "0.1"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
libc = "0.2"
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
qrcode = { version = "0.14", default-features = false }
# Official Rust MCP SDK. Powers the embedded Streamable HTTP `code_agent` and
# Loki review tool servers. MIT-licensed (GPL-3.0-compatible).
rmcp = { version = "1", features = ["server", "macros", "transport-streamable-http-server"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
# Parses the tailscale-issued certificate/key PEMs for the SNI resolver in
# `mj server --tailscale`. Already in the tree via reqwest's rustls-tls.
rustls-pemfile = "2"
# JSON Schema derivation for MCP tool argument structs (used by rmcp's `#[tool]`
# macro). Already in the tree via agent-client-protocol; pinned to the same 1.x.
schemars = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shell-words = "1"
similar = "2.7"
tar = "0.4"
tempfile = "3"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat", "rt"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
unicode-width = "0.2.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
arboard = "3.4"
