[package]
name = "brokk-mj-voice-worker"
version = "1.0.2"
edition = "2024"
description = "Native local speech-recognition sidecar for brokk-mjolnir"
license = "GPL-3.0-only"
repository = "https://github.com/BrokkAi/mjolnir"
publish = true

[[bin]]
name = "mj-voice-worker"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bzip2 = "0.6"
cpal = "0.16"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sherpa-onnx = { version = "1.13.2", default-features = false, features = ["static"] }
tar = "0.4"

[dev-dependencies]
tempfile = "3"
